# ros_rvr_recognition

./: README.md
rvr_recognition/: CMakeLists.txt  package.xml
rvr_recognition/camera/extrinsics/: back.yaml  front.yaml  left.yaml  right.yaml
rvr_recognition/camera/intrinsics/csi/: 1280_720.yaml  1920_1080.yaml  2592_1944.yaml
rvr_recognition/camera/intrinsics/usb/: 1280_720.yaml  1920_1080.yaml  2592_1944.yaml
rvr_recognition/launch/: aruco_detector.launch  back_camera.launch  camera.launch  color_detector.launch  csi_camera.launch  front_camera.launch  left_camera.launch  nn_detector.launch  right_camera.launch  rvr_recognition_aruco.launch  rvr_recognition_color.launch  rvr_recognition_nn.launch  rvr_recognition_view.launch  usb_camera.launch  vision_module_cameras.launch
rvr_recognition/nodes/: rvr_localisator  rvr_localisator_viewer
rvr_recognition/nodes/aruco_detector/: aruco_translator
rvr_recognition/nodes/color_detector/: color_detector  color_translator
rvr_recognition/nodes/nn_detector/: nn_detector  nn_translator
